--- a/views/tasks/createTask.ejs
+++ b/views/tasks/createTask.ejs
@@ -27,7 +27,7 @@
                             </div>
                             <div class="mb-3 col">
                                 <label for="due_date" class="form-label">Time</label>
-                                <input type="datetime-local" name="due_date" id="due_date" class="form-control">
+                                <input type="datetime-local" name="due_date" id="due_date" class="form-control" value="2024-03-13T09:00">
                             </div>
                             <div class="mb-3 col">
                                 <label for="priority1" class="form-label">Priority</label>
