--- a/views/users/confirmEmail.ejs
+++ b/views/users/confirmEmail.ejs
@@ -45,10 +45,7 @@
                         if (!response.ok) {
                             throw new Error("Network response was not ok");
                         }
-                        return response.json();
-                    })
-                    .then((data) => {
-                        console.log(data);
+                        window.location.href = "/user/login";
                     })
                     .catch((error) => {
                         console.error(
