--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="d-grid gap-2 col-6 mx-auto">
+  <div class="d-grid gap-2 col-3 position-absolute top-50 start-50 translate-middle" style="margin-top: -40px;">
     <button class="btn btn-primary" type="button" onclick="window.location.href='/user/login'">Login</button>
     <button class="btn btn-primary" type="button" onclick="window.location.href='/user/create'">Register</button>
   </div>
