--- a/views/tasks/viewListTask.ejs
+++ b/views/tasks/viewListTask.ejs
@@ -15,7 +15,7 @@
 <body>
 
     <div class="navbar row" id="navbar">
-        <div class="logo col-8">
+        <div class="logo col-8"  onclick="location.href='/task/view'">
             TODOAPP
         </div>
         <div class="menu col-2">
@@ -41,11 +41,24 @@
 
     </div>
     <div class="container-xxl">
-        <button type="button" class="btn btn-primary mb-3 mt-3" data-bs-toggle="modal" data-bs-target="#createModal">
-            Add
-        </button>
+        <div class="row mt-3">
+            <div class="col-3 row">
+                <div class="col-3">
+                    <button type="button" class="btn btn-primary" onclick="filterAtoZ()">A-Z</button>
+                </div>
+                <div class="col-3">
+                    <button type="button" class="btn btn-primary" onclick="filterZtoA()">Z-A</button>
+                </div>
+            </div>
+            <div class="col-8"></div>
+            <div class="col-1">
+                <button type="button" class="btn btn-primary mb-3 " data-bs-toggle="modal" data-bs-target="#createModal" style="margin-left: 70%;">
+                    Add
+                </button>
+            </div>
+        </div>
         <%- include('../tasks/createTask.ejs'); %>
-        <div class="row">
+        <div class="row" style="height: 480px;">
             <div class="col bg-light mx-2">
                 <div class="title-time mt-2">
                     <p>Todo</p>
@@ -54,7 +67,7 @@
                     <tbody id="page">
                         <% tasksTodo.forEach(function(task) { %>
                         <tr class="border border-5 border-light" id="<%= task.id %>">
-                            <td class="col-9 ps-3" onclick="updateTask(<%= JSON.stringify(task) %>)" data-bs-toggle="modal" data-bs-target="#updateModal">
+                            <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
                                 <div class="d-flex align-items-start flex-column bd-highlight" style="height:auto;">
                                     <div class="mb-auto bd-highlight title"><%= task.title %></div>
                                     <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
@@ -84,7 +97,7 @@
                     <tbody>
                         <% tasksInprogress.forEach(function(task) { %>
                         <tr class="border border-5 border-light" id="<%= task.id %>">
-                            <td class="col-9 ps-3" onclick="updateTask(<%= JSON.stringify(task) %>)" data-bs-toggle="modal" data-bs-target="#updateModal">
+                            <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
                                 <div class="d-flex align-items-start flex-column bd-highlight">
                                     <div class="mb-auto bd-highlight title"><%= task.title %></div>
                                     <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
@@ -115,7 +128,7 @@
                     <tbody>
                         <% tasksCompleted.forEach(function(task) { %>
                         <tr class="border border-5 border-light" id="<%= task.id %>">
-                            <td class="col-9 ps-3" onclick="updateTask(<%= JSON.stringify(task) %>)" data-bs-toggle="modal" data-bs-target="#updateModal">
+                            <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
                                 <div class="d-flex align-items-start flex-column bd-highlight">
                                     <div class="mb-auto bd-highlight title"><%= task.title %></div>
                                     <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
@@ -139,7 +152,6 @@
         <div class="d-flex justify-content-center">
             <nav aria-label="Page navigation example">
                 <ul class="pagination mt-3">
-
                     <li class="page-item"><a class="page-link" onclick="nextPage(1)">1</a></li>
                     <li class="page-item"><a class="page-link" onclick="nextPage(2)">2</a></li>
                     <li class="page-item"><a class="page-link" onclick="nextPage(3)">3</a></li>
@@ -147,16 +159,28 @@
                 </ul>
             </nav>
         </div>
-        <div id="taskRows"></div>
     </div>
     <script>
-        function nextPage(page){
+        function filterAtoZ() {
             var urlParams = new URLSearchParams(window.location.search);
-            console.log(urlParams);
+                urlParams.set('filter', 'ASC');
+                var newUrl = window.location.pathname + '?' + urlParams.toString();
+                window.location.href = newUrl;
+        }
+        function filterZtoA() {
+            var urlParams = new URLSearchParams(window.location.search);
+                urlParams.set('filter', 'DESC');
+                var newUrl = window.location.pathname + '?' + urlParams.toString();
+                window.location.href = newUrl;
+        }
+
+        function nextPage(page) {
+            var urlParams = new URLSearchParams(window.location.search);
             urlParams.set('page', page);
             var newUrl = window.location.pathname + '?' + urlParams.toString();
             window.location.href = newUrl;
         }
+
         function updateStatusTask(task_id, status_id, x) {
             fetch("/task/update/status/" + task_id, {
                     method: "post",
@@ -178,9 +202,14 @@
                 .catch((error) => console.error("Lỗi:", error));
         }
 
+        function convertJSONtoHTML(jsonString) {
+            return jsonString.replace(/"/g, '&quot;');
+        }
+
         function updateTask(task) {
             console.log(task);
-            var newTask = task;
+            var newTask = JSON.parse(task);
+            console.log(newTask);
             var taskId = newTask.id;
             const deleteButton = document.getElementById("deleteButton");
             deleteButton.dataset.taskId = taskId;
