--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="d-flex justify-content-center">
+    <div class="position-absolute top-50 start-50 translate-middle">
         <form method="post" action="/user/login" id="form_login" class="login">
             <div class="container p-3">
                 <div class="mb-3 col-12">
@@ -43,8 +43,12 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ password, email })
+                    body: JSON.stringify({
+                        password,
+                        email
+                    })
                 });
+                const responseData = await response.json(); 
                 if (response.status === 401) {
                     const Toast = Swal.mixin({
                         toast: true,
@@ -57,11 +61,13 @@
                             toast.onmouseleave = Swal.resumeTimer;
                         }
                     });
+                    const responseData = await response.json(); 
                     Toast.fire({
                         icon: "warning",
-                        title: "Invalid Email or Password!"
+                        title: responseData.msg 
                     });
                 } else {
+                    localStorage.setItem('token',responseData.token);
                     window.location.href = '/task/view';
                 }
             } catch (error) {
