--- a/views/users/confirmEmail.ejs
+++ b/views/users/confirmEmail.ejs
@@ -1,59 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-        />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="input-group mb-3 mt-3">
-                <input
-                    id="inputData"
-                    type="text"
-                    class="form-control"
-                    aria-describedby="button-addon2"
-                />
-                <button
-                    class="btn btn-outline-secondary"
-                    type="button"
-                    id="button-addon2"
-                    onclick="sendData()"
-                >
-                    Verify
-                </button>
-            </div>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="input-group mb-3 mt-3">
+            <input id="inputData" type="text" class="form-control" aria-describedby="button-addon2" />
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="sendData()">
+                Verify
+            </button>
         </div>
-        <script>
-            function sendData() {
-                const urlParams = new URLSearchParams(window.location.search);
-                const email = urlParams.get("email");
-                var inputData = document.getElementById("inputData").value;
-                fetch("/user/confirmEmail", {
+    </div>
+    <script>
+        async function sendData() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const email = urlParams.get("email");
+            var inputData = document.getElementById("inputData").value;
+            try {
+                const response = await fetch("/user/confirmEmail", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
                     },
-                    body: JSON.stringify({ code: inputData ,email:email}),
-                })
-                    .then((response) => {
-                        if (!response.ok) {
-                            throw new Error("Network response was not ok");
+                    body: JSON.stringify({
+                        code: inputData,
+                        email: email
+                    }),
+                });
+
+                if (response.status === 400) {
+                    const Toast = Swal.mixin({
+                        toast: true,
+                        position: "top-end",
+                        showConfirmButton: false,
+                        timer: 3000,
+                        timerProgressBar: true,
+                        didOpen: (toast) => {
+                            toast.onmouseenter = Swal.stopTimer;
+                            toast.onmouseleave = Swal.resumeTimer;
                         }
-                        window.location.href = "/user/login";
-                    })
-                    .catch((error) => {
-                        console.error(
-                            "There was a problem with your fetch operation:",
-                            error
-                        );
                     });
+                    const responseData = await response.json();
+                    console.log(responseData);
+                    Toast.fire({
+                        icon: "warning",
+                        title: responseData.msg
+                    });
+                    return;
+                }
+
+                window.location.href = "/user/login";
+            } catch (error) {
+                console.error("There was a problem with your fetch operation:", error);
             }
-        </script>
-    </body>
+        }
+    </script>
+</body>
+
 </html>
