--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -26,7 +26,7 @@
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
             <div>
-                <a href="http://localhost:3000/user/create">adsda</a>
+                <a href="http://localhost:3000/user/create">Register</a>
             </div>
         </form>
     </div>
