--- a/views/tasks/updateTask.ejs
+++ b/views/tasks/updateTask.ejs
@@ -3,7 +3,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">UPDATE TASK</h5>
+                <h5 class="modal-title" id="staticBackdropLabel">TASK</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="update_task" method="put" action="/task/update">
