--- a/views/tasks/viewListTask.ejs
+++ b/views/tasks/viewListTask.ejs
@@ -10,12 +10,16 @@
     <script src="https://kit.fontawesome.com/affd473cba.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <style>
+        body {
+            background-image: linear-gradient(to right, #112D60, #DD83E0);
+        }
+    </style>
 </head>
 
 <body>
-
     <div class="navbar row" id="navbar">
-        <div class="logo col-8"  onclick="location.href='/task/view'">
+        <div class="logo col-8" onclick="location.href='/task/view'">
             TODOAPP
         </div>
         <div class="menu col-2">
@@ -27,7 +31,6 @@
 
                 </div>
             </div>
-
         </div>
         <div class="btn-group name col-2">
             <button type="button" class="btn btn-danger"><%= name %></button>
@@ -38,121 +41,106 @@
                 <button type="button" class="dropdown-item" onclick="logout()">Log out</button>
             </ul>
         </div>
-
     </div>
-    <div class="container-xxl">
+    <div class="container-xxl" style="margin-top: 30px;">
         <div class="row mt-3">
-            <div class="col-3 row">
-                <div class="col-3">
-                    <button type="button" class="btn btn-primary" onclick="filterAtoZ()">A-Z</button>
+            <div class="col-3 row mt-3" style="margin-left: -16px;">
+                <div class="col-2">
+                    <button type="button" class="button-filter" onclick="filterAtoZ()">A-Z</button>
                 </div>
-                <div class="col-3">
-                    <button type="button" class="btn btn-primary" onclick="filterZtoA()">Z-A</button>
+                <div class="col-2">
+                    <button type="button" class="button-filter" onclick="filterZtoA()">Z-A</button>
                 </div>
             </div>
             <div class="col-8"></div>
-            <div class="col-1">
-                <button type="button" class="btn btn-primary mb-3 " data-bs-toggle="modal" data-bs-target="#createModal" style="margin-left: 70%;">
+            <div class="col-1 d-flex justify-content-end">
+                <button type="button" class="btn btn-primary mb-3 " data-bs-toggle="modal" data-bs-target="#createModal" style="margin-right: -33px;">
                     Add
                 </button>
             </div>
         </div>
         <%- include('../tasks/createTask.ejs'); %>
         <%- include('../tasks/updateTask.ejs') %>
-        <div class="row" style="height: 480px;">
-            <div class="col bg-light mx-2">
+        <div class="row" style="height: 490px;">
+            <div class="col box mx-2">
                 <div class="title-time mt-2">
                     <p>Todo</p>
                 </div>
-                <table class="table table-hover table-white table-sm">
-                    <tbody id="page">
-                        <% tasksTodo.forEach(function(task) { %>
-                        <tr class="border border-5 border-light" id="<%= task.id %>">
-                            <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
-                                <div class="d-flex align-items-start flex-column bd-highlight" style="height:auto;">
-                                    <div class="mb-auto bd-highlight title"><%= task.title %></div>
-                                    <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
-                                    <div class="bd-highlight priority"><%= priorityName.name %></div>
-                                    <div class="bd-highlight due_date"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
-                                </div>
-                            </td>
-                            
-                            <td>
-                                <div class="d-flex justify-content-end">
-                                    <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',1)" class="icon-button me-2">
-                                        <i class="fa-solid fa-caret-right fa-4x"></i>
-                                    </button>
-                                </div>
-                            </td>
-                        </tr>
-                        <% }); %>
-                    </tbody>
-                </table>
-
+                <% tasksTodo.forEach(function(task) { %>
+                <div class=" row m-1 py-1 my-2 task" id="<%= task.id %>">
+                    <div class="col-11 ps-2" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
+                        <div class="d-flex align-items-start flex-column bd-highlight" style="height:auto;">
+                            <div class="mb-auto bd-highlight title"><%= task.title %></div>
+                            <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
+                            <div class="bd-highlight priority ps-1"><%= priorityName.name %></div>
+                            <div class="bd-highlight due_date ps-1"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="d-flex justify-content-end">
+                            <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',1)" class="icon-button me-2">
+                                <i class="fa-solid fa-caret-right fa-4x"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <% }); %>
             </div>
-            <div class="col bg-light mx-2">
+            <div class="col box mx-2">
                 <div class="title-time mt-2">
                     <p>Inprogress</p>
                 </div>
-                <table class="table table-hover table-white table-sm">
-                    <tbody>
-                        <% tasksInprogress.forEach(function(task) { %>
-                        <tr class="border border-5 border-light" id="<%= task.id %>">
-                            <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
-                                <div class="d-flex align-items-start flex-column bd-highlight">
-                                    <div class="mb-auto bd-highlight title"><%= task.title %></div>
-                                    <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
-                                    <div class="bd-highlight priority"><%= priorityName.name %></div>
-                                    <div class="bd-highlight due_date"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="d-flex justify-content-end">
-                                    <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',-1)" class="icon-button">
-                                        <i class="fa-solid fa-caret-left fa-4x"></i>
-                                    </button>
-                                    <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',1)" class="icon-button me-2">
-                                        <i class="fa-solid fa-caret-right fa-4x"></i>
-                                    </button>
-                                </div>
-                            </td>
-                        </tr>
-                        <% }); %>
-                    </tbody>
-                </table>
+                <% tasksInprogress.forEach(function(task) { %>
+                <div class="task bg-light row m-1 py-1 my-2" id="<%= task.id %>">
+                    <div class="col-10 ps-2" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
+                        <div class="d-flex align-items-start flex-column bd-highlight">
+                            <div class="mb-auto bd-highlight title"><%= task.title %></div>
+                            <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
+                            <div class="bd-highlight priority ps-1"><%= priorityName.name %></div>
+                            <div class="bd-highlight due_date ps-1"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="d-flex justify-content-end">
+                            <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',-1)" class="icon-button">
+                                <i class="fa-solid fa-caret-left fa-4x"></i>
+                            </button>
+                            <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',1)" class="icon-button">
+                                <i class="fa-solid fa-caret-right fa-4x"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <% }); %>
             </div>
-            <div class="col bg-light mx-2">
+            <div class="col box mx-2">
                 <div class="title-time mt-2">
                     <p>Completed</p>
                 </div>
-                <table class="table table-hover table-white table-sm">
-                    <tbody>
-                        <% tasksCompleted.forEach(function(task) { %>
-                        <tr class="border border-5 border-light" id="<%= task.id %>">
-                            <td class="col-9 ps-3" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
-                                <div class="d-flex align-items-start flex-column bd-highlight">
-                                    <div class="mb-auto bd-highlight title"><%= task.title %></div>
-                                    <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
-                                    <div class="bd-highlight priority"><%= priorityName.name %></div>
-                                    <div class="bd-highlight due_date"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="d-flex justify-content-end">
-                                    <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',-1)" class="icon-button">
-                                        <i class="fa-solid fa-caret-left fa-4x"></i>
-                                    </button>
-                                </div>
-                            </td>
-                        </tr>
-                        <% }); %>
-                    </tbody>
-                </table>
+                <% tasksCompleted.forEach(function(task) { %>
+                <div class="task bg-light row m-1 py-1 my-2" id="<%= task.id %>">
+                    <div class="col-11 ps-2" onclick="updateTask('<%= JSON.stringify(task) %>')" data-bs-toggle="modal" data-bs-target="#updateModal">
+                        <div class="d-flex align-items-start flex-column bd-highlight">
+                            <div class="mb-auto bd-highlight title"><%= task.title %></div>
+                            <% var priorityName = priorityTable.find(function(priority) {return priority.id == task.priority_id;}); %>
+                            <div class="bd-highlight priority ps-1"><%= priorityName.name %></div>
+                            <div class="bd-highlight due_date ps-1"><%= new Date(task.due_date).toISOString().slice(0,16).replace('T',' ') %></div>
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="d-flex justify-content-end">
+                            <button onclick="updateStatusTask('<%= task.id %>','<%= task.status_id %>',-1)" class="icon-button">
+                                <i class="fa-solid fa-caret-left fa-4x"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <% }); %>
             </div>
         </div>
         <div class="d-flex justify-content-center">
             <nav aria-label="Page navigation example">
-                <ul class="pagination mt-3">
+                <ul class="pagination" style="margin-top: 30px;">
                     <li class="page-item"><a class="page-link" onclick="nextPage(1)">1</a></li>
                     <li class="page-item"><a class="page-link" onclick="nextPage(2)">2</a></li>
                     <li class="page-item"><a class="page-link" onclick="nextPage(3)">3</a></li>
@@ -164,15 +152,16 @@
     <script>
         function filterAtoZ() {
             var urlParams = new URLSearchParams(window.location.search);
-                urlParams.set('filter', 'ASC');
-                var newUrl = window.location.pathname + '?' + urlParams.toString();
-                window.location.href = newUrl;
+            urlParams.set('filter', 'ASC');
+            var newUrl = window.location.pathname + '?' + urlParams.toString();
+            window.location.href = newUrl;
         }
+
         function filterZtoA() {
             var urlParams = new URLSearchParams(window.location.search);
-                urlParams.set('filter', 'DESC');
-                var newUrl = window.location.pathname + '?' + urlParams.toString();
-                window.location.href = newUrl;
+            urlParams.set('filter', 'DESC');
+            var newUrl = window.location.pathname + '?' + urlParams.toString();
+            window.location.href = newUrl;
         }
 
         function nextPage(page) {
@@ -200,7 +189,7 @@
                     }
                     location.reload()
                 })
-                .catch((error) => console.error("Lỗi:", error));
+                .catch((error) => console.error(error));
         }
 
         function convertJSONtoHTML(jsonString) {
@@ -248,7 +237,7 @@
                     }
                     location.reload();
                 } catch (error) {
-                    console.error("Lỗi:", error);
+                    console.error(error);
                 }
             });
         }
@@ -291,7 +280,7 @@
                     location.reload()
 
                 })
-                .catch((error) => console.error("Lỗi:", error));
+                .catch((error) => console.error(error));
         }
         document.getElementById('searchInput').addEventListener('input', function() {
             var searchTerm = this.value.trim();
@@ -314,7 +303,7 @@
                     displaySearchResults(data);
                 })
                 .catch(error => {
-                    console.error('Lỗi khi tìm kiếm:', error);
+                    console.error(error);
                 });
         }
 
@@ -327,7 +316,6 @@
                 noResultsItem.textContent = 'Không tìm thấy kết quả.';
                 searchResultsList.appendChild(noResultsItem);
             } else {
-                console.log(results);
                 results.forEach(function(task) {
                     var listItem = document.createElement('div');
                     listItem.textContent = task.title;
