--- a/views/users/confirmEmail.ejs
+++ b/views/users/confirmEmail.ejs
@@ -49,7 +49,6 @@
                         }
                     });
                     const responseData = await response.json();
-                    console.log(responseData);
                     Toast.fire({
                         icon: "warning",
                         title: responseData.msg
@@ -59,7 +58,7 @@
 
                 window.location.href = "/user/login";
             } catch (error) {
-                console.error("There was a problem with your fetch operation:", error);
+                console.error( error);
             }
         }
     </script>
