--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-  <div class="d-grid gap-2 col-3 position-absolute top-50 start-50 translate-middle" style="margin-top: -40px;">
-    <button class="btn btn-primary" type="button" onclick="window.location.href='/user/login'">Login</button>
-    <button class="btn btn-primary" type="button" onclick="window.location.href='/user/create'">Register</button>
-  </div>
+    <div class="d-grid gap-2 col-3 position-absolute top-50 start-50 translate-middle" style="margin-top: -40px;">
+        <button class="btn btn-primary" type="button" onclick="window.location.href='/users/login'">Login</button>
+        <button class="btn btn-primary" type="button" onclick="window.location.href='/users/register'">Register</button>
+    </div>
 </body>
