--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -18,7 +18,7 @@
 
 <body>
     <div class="position-absolute top-50 start-50 translate-middle">
-        <form method="post" action="/user/login" id="form_login" class="login">
+        <form method="post" action="/users/login" id="form_login" class="login">
             <div class="container p-3">
                 <div class="mb-3 col-12">
                     <label for="email" class="form-label">Email address</label>
@@ -31,7 +31,7 @@
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
             <div class="d-flex justify-content-end pb-2 pe-3">
-                <a href="http://localhost:3000/user/create" style="color: black;">Register</a>
+                <a href="http://localhost:3000/users/register" style="color: black;">Register</a>
             </div>
         </form>
     </div>
@@ -43,7 +43,7 @@
             const email = formData.get('email');
             const password = formData.get('password');
             try {
-                const response = await fetch('/user/login', {
+                const response = await fetch('/users/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -73,7 +73,7 @@
                     });
                 } else {
                     localStorage.setItem('token',responseData.token);
-                    window.location.href = '/task/view';
+                    window.location.href = '/tasks';
                 }
             } catch (error) {
                 console.error(error);
